--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     </div> 
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12">
-            <img src="img/scroll.png" class="scroll center-block" alt="scroll">  
+            <img src="img/scroll.png" class="scroll center-block" alt="scroll"> 
+            <img src="img/arrow-down.png" alt="arrow-down" class="animate arrow"> 
         </div>  
     </div>  
 </header>
