Falta el opacity, la animacion al poner el cursor en la seccion y poner el texto

--- a/index.html
+++ b/index.html
@@ -47,17 +47,19 @@
         </div>  
     </div> 
     <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12">
+        <div class="visible-md visible-lg">
             <img src="img/scroll.png" class="scroll center-block" alt="scroll"> 
             <img src="img/arrow-down.png" alt="arrow-down" class="animated bounce infinite arrow"> 
         </div>  
     </div>  
 </header>
 
+<div class="div1-responsive visible-xs visible-sm"></div><!--DIV RESPONSIVE-->
+
 <!-- VIDEO -->
 <section class="video">
     <div class="row">
-        <div class="embed-responsive embed-responsive-16by9 hidden-xs hidden-sm">
+        <div class="embed-responsive embed-responsive-16by9 visible-md visible-lg">
             <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/148993635"></iframe>
         </div>
     </div>
@@ -89,9 +91,9 @@
             <h3 class="text-center rosado">Negro</h3>
             <p class="text-center descripcion-2 foto-dos-cuatro">Disminuye la absorción de colesterol y reduce la posibilidad de sufrir enfermedades cardiovasculares.</p>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-3">
+        <div class="col-xs-12 col-sm-12 col-md-3 margen-texto">
             <h3 class="text-center rosado">Verde</h3>
-            <p class="text-center descripcion-2 foto-dos-cuatro">Reduce la formación de coágulos anormales favoreciendo nuestro corazón, además disminuye los niveles de azúcar.</p>
+            <p class="text-center descripcion-2 foto-dos-cuatro margen-texto">Reduce la formación de coágulos anormales favoreciendo nuestro corazón, además disminuye los niveles de azúcar.</p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-2">
             <h3 class="text-center rosado">Rojo</h3>
@@ -99,7 +101,7 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3">
             <h3 class="text-center rosado">Blanco</h3>
-            <p class="text-center descripcion-2 foto-dos-cuatro">Disminuye la absorción de colesterol y reduce la posibilidad de sufrir enfermedades cardiovasculares.</p>
+            <p class="text-center descripcion-2 foto-dos-cuatro margen-texto">Disminuye la actividad de las enzimas que disminuyen la producción de elastina y colágeno en nuestra piel.</p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-2">
             <h3 class="text-center rosado">Oolong</h3>
@@ -112,7 +114,7 @@
 <section>
     <div class="row hidden-xs hidden-sm">
         <div class="col-sm-6 col-md-6">
-            <img src="img/min-video-1-2.png" alt="min-video-1-2" class="foto1 foo bar"> 
+            <img src="img/min-video-1-2.png" alt="min-video-1-2" class="foto1 foo bar" id="opacidad"> 
             <!--<div class="texto1">
                 <p class="texto1">¿Todas las infusiones son té?</p> 
             </div>-->   
@@ -120,13 +122,13 @@
         <div class="col-sm-6 col-md-6">
             <div class="row">
                 <div class="col-sm-6 col-md-6">
-                    <img src="img/min-video-3.png" class="foto2 foo foto-dos-cuatro">
+                    <img src="img/min-video-3.png" class="foto2 foo foto-dos-cuatro" id="opacidad">
                     <!--<div class="texto2">
                         <p>¿Tiene la misma cafeina que el café?</p>
                     </div>-->    
                 </div>  
                 <div class="col-sm-6 col-md-6">
-                    <img src="img/min-video-5.png" class="foto3 foto-tres"> 
+                    <img src="img/min-video-5.png" class="foto3 foto-tres" id="opacidad"> 
                     <!--<div class="texto3">
                         <p>¿Cuál es la diferencia entre las bolsitas de té y el té a granel o en piramides?</p> 
                     </div>-->   
@@ -142,7 +144,7 @@
     </div>  
 </section>
 
-<!-- SECCION 4 -->
+<!-- SECCION 4 "PREGUNTAS SOBRE EL TÉ" -->
 <section class="preguntas">
     <div class="row position">
         <div class="col-xs-12 col-sm-12 col-md-12 relative">
@@ -153,47 +155,52 @@
         <div class="col-xs-8 col-sm-8 col-md-8">
             <h2 class="text-right titulo-4">PREGUNTAS SOBRE EL TÉ</h2> 
         </div>
-    </div>     
+    </div>      
 </section>
+
+<div class="div1-responsive visible-xs visible-sm"></div><!--DIV RESPONSIVE-->
 
 <!-- SECCION 5 -->
 <section>
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6">
               <h3 class="text-center texto">¿Cuanto té debo echar para una taza?</h3>
-              <p class="text-center texto">chara medidora, no obstante, si no se tiene basta con utilizar una cuchara de postre. Es importante saber que la cantidad de hebras que echemos solo va a influir en la intensidad del sabor del té y teniendo en cuenta que hay persona que les gusta el té más intenso intenso que otras, se puede modificar la cantidad que se echa sin problemas. También debemos tener en cuenta que el té blanco tiene mucho más volumen que el resto de tés y por tanto, necesitaremos más cantidad para lograr los 3 gramos recomendados</p>
+              <p class="text-center parrafo">chara medidora, no obstante, si no se tiene basta con utilizar una cuchara de postre. Es importante saber que la cantidad de hebras que echemos solo va a influir en la intensidad del sabor del té y teniendo en cuenta que hay persona que les gusta el té más intenso intenso que otras, se puede modificar la cantidad que se echa sin problemas. También debemos tener en cuenta que el té blanco tiene mucho más volumen que el resto de tés y por tanto, necesitaremos más cantidad para lograr los 3 gramos recomendados</p>
         </div> 
-        <div class="col-xs-12 col-sm-12 col-md-6 icon1">
-            <img src="img/icon-1.png" alt="icon-1" class="hidden-xs hidden-sm foo">  
+        <div class="visible-md visible-lg col-md-6 col-lg-6 icon1">
+            <img src="img/icon-1.png" alt="icon-1" class="foo">  
         </div> 
     </div>
+    <div class="div2-responsive visible-xs visible-sm"></div><!--DIV RESPONSIVE-->
     <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-6 icon2">
+        <div class="visible-md visible-lg col-md-6 col-lg-6 icon2">
             <img src="img/icon-2.png" alt="icon-2" class="hidden-xs hidden-sm foo">  
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6">
               <h3 class="text-center texto">¿Debo hervir el agua para hacer té?</h3>
               <p class="text-center texto">Nunca debemos echar agua hirviendo sobre las hebras de té. Si tenemos agua hirviendo la podemos utilizar siempre y cuando la hagamos disminuir de temperatura, bien esperando o bien mezclandola con agua fría. Hay un caso en el que es recomendable hervir el agua y es cuando queremos utilizar agua corriente y ésta es dura. En este caso deberemos filtrarla, hervirla y dejarla reposar unos minutos para que los minerales precipiten y su temperatura del agua que debemos cumplir si queremos obtener la mejor versión de nuestro té:</p>
-              <ul class="text-center">
+              <ul class="text-center lista">
                   <li>Tés verdes: 70° C</li>
                   <li>Tés blancos y negros: 80° C</li>
                   <li>Tés azules (oolongs), Pu erh, rooibos y otras infusiones: 95° C</li>
               </ul>
         </div>  
     </div>
+    <div class="div3-responsive visible-xs visible-sm"></div><!--DIV RESPONSIVE-->
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6">
               <h3 class="text-center texto">¿Cuántos tés e infusiones son recomendables al día?</h3>
-              <p class="text-center texto">Cada persona tiene una tolerancia a la teina distinta de modo que tendrá que ver cuántas tazas de té puede tomar al día. No obstante, podemos compaginar tomar té con tomar otras infusiones sin teína como el rooibos, las infusiones frutales, las especiadas, etc. Y de esta forma no nos tendremos que preocupar por si nos estimula demasiado.</p>
+              <p class="text-center parrafo">Cada persona tiene una tolerancia a la teina distinta de modo que tendrá que ver cuántas tazas de té puede tomar al día. No obstante, podemos compaginar tomar té con tomar otras infusiones sin teína como el rooibos, las infusiones frutales, las especiadas, etc. Y de esta forma no nos tendremos que preocupar por si nos estimula demasiado.</p>
         </div> 
-        <div class="col-xs-12 col-sm-12 col-md-6 icon3">
+        <div class="visible-md visible-lg col-md-6 col-lg-6 icon3">
             <img src="img/icon-3.png" alt="icon3" class="hidden-xs hidden-sm foo">  
         </div> 
     </div>
+    <div class="div1-responsive visible-xs visible-sm"></div><!--DIV RESPONSIVE-->
 </section>
 
-<!-- SECCION 6 -->
-<section class="campos">
+<!-- SECCION 6 "LOS CAMPOS"-->
+<section class="campos visible-md visible-lg">
      <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12">
             <img src="img/trxto-hagamos-black.png" class="img-responsive logo" alt="logo 1">  
@@ -201,14 +208,14 @@
       </div>
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12">
-            <h2 class="text-center los-campos">LOS CAMPOS</h2> 
+            <h2 class="text-center center-block los-campos">LOS CAMPOS</h2> 
         </div>
       </div>
 </section>
 
 <!-- SECCION 7 (SLIDES) -->
 <section>
-    <div class="row slides-padding">
+    <div class="row slides-padding visible-md visible-lg">
         <div id="slides">
             <div class="slides-container">
                 <img src="img/slide1.png" id="slide1">
@@ -216,8 +223,8 @@
                 <img src="img/slide3.png" width="1040" height="683" alt="slide3" id="cinelli">
             </div>
             <nav class="slides-navigation">
-                <a href="#" class="next"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a>
-                <a href="#" class="prev"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a>
+                <a href="#" class="next"><h2 class="flechas">></h2></a>
+                <a href="#" class="prev"><H2 class="flechas"><</H2></span></a>
             </nav>
         </div>
     </div>
