Se corrigen algunas funciones de JS

--- a/index.html
+++ b/index.html
@@ -114,31 +114,19 @@
 <section>
     <div class="row hidden-xs hidden-sm">
         <div class="col-sm-6 col-md-6">
-            <img src="img/min-video-1-2.png" alt="min-video-1-2" class="foto1 foo bar" id="opacidad"> 
-            <!--<div class="texto1">
-                <p class="texto1">¿Todas las infusiones son té?</p> 
-            </div>-->   
+            <img src="img/min-video-1-2.png" alt="min-video-1-2" class="foto1 skew" id="opacidad">    
         </div>  
         <div class="col-sm-6 col-md-6">
             <div class="row">
                 <div class="col-sm-6 col-md-6">
                     <img src="img/min-video-3.png" class="foto2 foo foto-dos-cuatro" id="opacidad">
-                    <!--<div class="texto2">
-                        <p>¿Tiene la misma cafeina que el café?</p>
-                    </div>-->    
                 </div>  
                 <div class="col-sm-6 col-md-6">
-                    <img src="img/min-video-5.png" class="foto3 foto-tres" id="opacidad"> 
-                    <!--<div class="texto3">
-                        <p>¿Cuál es la diferencia entre las bolsitas de té y el té a granel o en piramides?</p> 
-                    </div>-->   
+                    <img src="img/min-video-5.png" class="foto3 foto-tres" id="opacidad">   
                 </div>  
             </div>
             <div class="row">
-                <img src="img/min-video-6.png" class="foto4 foto-dos-cuatro">
-                <!--<div class="texto4"> 
-                    <p class="texto4">¿Se puede mezclar distintos tipos de té para hacer una infusión?</p> 
-                </div>-->    
+                <img src="img/min-video-6.png" class="foto4 foto-dos-cuatro">    
             </div>
         </div>
     </div>  
@@ -168,13 +156,13 @@
               <p class="text-center parrafo">chara medidora, no obstante, si no se tiene basta con utilizar una cuchara de postre. Es importante saber que la cantidad de hebras que echemos solo va a influir en la intensidad del sabor del té y teniendo en cuenta que hay persona que les gusta el té más intenso intenso que otras, se puede modificar la cantidad que se echa sin problemas. También debemos tener en cuenta que el té blanco tiene mucho más volumen que el resto de tés y por tanto, necesitaremos más cantidad para lograr los 3 gramos recomendados</p>
         </div> 
         <div class="visible-md visible-lg col-md-6 col-lg-6 icon1">
-            <img src="img/icon-1.png" alt="icon-1" class="foo">  
+            <img src="img/icon-1.png" alt="icon-1" class="skew">  
         </div> 
     </div>
     <div class="div2-responsive visible-xs visible-sm"></div><!--DIV RESPONSIVE-->
     <div class="row">
         <div class="visible-md visible-lg col-md-6 col-lg-6 icon2">
-            <img src="img/icon-2.png" alt="icon-2" class="hidden-xs hidden-sm foo">  
+            <img src="img/icon-2.png" alt="icon-2" class="hidden-xs hidden-sm skew">  
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6">
               <h3 class="text-center texto">¿Debo hervir el agua para hacer té?</h3>
@@ -193,7 +181,7 @@
               <p class="text-center parrafo">Cada persona tiene una tolerancia a la teina distinta de modo que tendrá que ver cuántas tazas de té puede tomar al día. No obstante, podemos compaginar tomar té con tomar otras infusiones sin teína como el rooibos, las infusiones frutales, las especiadas, etc. Y de esta forma no nos tendremos que preocupar por si nos estimula demasiado.</p>
         </div> 
         <div class="visible-md visible-lg col-md-6 col-lg-6 icon3">
-            <img src="img/icon-3.png" alt="icon3" class="hidden-xs hidden-sm foo">  
+            <img src="img/icon-3.png" alt="icon3" class="hidden-xs hidden-sm skew">  
         </div> 
     </div>
     <div class="div1-responsive visible-xs visible-sm"></div><!--DIV RESPONSIVE-->
@@ -208,7 +196,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12">
-            <h2 class="text-center center-block los-campos">LOS CAMPOS</h2> 
+            <h2 class="text-center los-campos">LOS CAMPOS</h2> 
         </div>
       </div>
 </section>
